--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="tnm, group, investments, site, tony melek">
+    <meta name="description" content="TNM Group, web solutions">
     <link rel="icon" type="image/x-icon" href="/tnm_icon.ico" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
